--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.5",
+    "oidc-client-ts": "^3.2.0",
     "preact": "^10.26.4",
     "react-router-dom": "^7.5.2"
   },
