using host.docker.internal

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
   listen 80;
-  server_name parceltrust.localtest.me;
+  server_name localhost;
 
   root /usr/share/nginx/html;
   index index.html;
