--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -14,4 +14,4 @@ jobs:
           node-version: 18
 
       - run: npm ci
-      - run: npm test -- --coverage --runInBand
+      - run: npm test -- --coverage
