--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@preact/preset-vite": "^2.10.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/preact": "^3.2.4",
+    "@vitest/coverage-v8": "^3.1.4",
     "jsdom": "^26.1.0",
     "typescript": "~5.7.2",
     "vite": "^6.3.1",
